# tinytalk

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  MANUAL.md  README.md  install.ps1  install.sh  pyproject.toml  tinytalk.py
tinytalk/: __init__.py  app.py  audio.py  backend.py  crypto.py  render.py  transcripts.py  whisper.py
