[project]
name = "tinytalk"
version = "0.2.0"
description = "Push-to-talk terminal transcription, powered by Whisper. macOS uses MLX, Windows/Linux use faster-whisper."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "sounddevice",
    "scipy",
    "huggingface_hub[cli]", # i couldn't find the hf one or i forgot it lol
    "tqdm",
    "mlx-whisper; sys_platform == 'darwin'",
    "faster-whisper; sys_platform != 'darwin'",
    "windows-curses; sys_platform == 'win32'",
]

[project.scripts]
tinytalk = "tinytalk:main_wrapper"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinytalk*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
